[tool.poetry]
name = "daxa"
version = "0.1.2"
description ="Daxa OpenSource"
authors = ["Daxa <info@daxa.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daxa-ai/daxa-analyzer-rc1"
packages = [{include = "analyzer"}, {include = "bin"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "0.109.0"
uvicorn = "0.25.0"
pydantic = "1.10.0a1"
presidio-analyzer = "2.2.351"
presidio-anonymizer = "2.2.351"
torch = "2.1.2"
transformers = "4.36.2"
jinja2 = "2.11.3"
weasyprint = "60.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
